test: add service and controller unit tests